- ValidationWorker for validating data such as email addresses or passwords.
- ValidationFlags collection for handling validation flags.
- API Response success boolean field.
- AlreadyAuthorizedException for handling unauthorized exclusive endpoints.
- Endpoint argument unauthorizedExclusive for handling unauthorized exclusive endpoints.

#### Changed
- Skeleton: Update build.sh to account for last changes.
- DataWorker now uses Collection and Item components.
- Router now uses Collection and Item components.
- Template now uses Collection and Item components.
- PHP Version downgrade to 8.4 to support hosting deployment.
- System logs now are collapsed so they take less space.

#### Fixed
- Skeleton: Sites folder not accounted for deploy.sh and index.php
- Skeleton: .htaccess fallback not working.
- Skeleton: Sites folder not accounted for watch.sh
- NotFoundException and NotAuthorizedException are not being handled correctly.
- ValidationWorker is not initialized. (jesus christ)
- DataWorker::getOne() crashes when no result is found.
- AlreadyAuthorizedException is not being handled.

#### Removed
- htmlspecialchars method from Request::sanitizeData().
- meta tag HTTP headers from main.php Template.
- API Response status string field.

---

### [v0.2] - 2025-12-06
#### Added
- Configuration of path redirects for 404 error.
- Support for .html template injection before and after #main div.
- Server::preload(__DIR__) for loading environment configuration.
- Server::getConfiguration(), Server::getTemplate(), Server::getViewRouter(), Server::getApiRouter() for modular loading.
- Test suite added.
- Feature to enable authorization across parent domain and all subdomains.
- Bee::getBaseDomain() and Bee::getBuiltDomain(...) for getting base domain and subdomain.
- Bee::hashPassword(...) and AuthWorker::autologin(...) for automatic password hashing and auto-login.
- AuthWorker::getAuthorizedUserId() for getting authorized user ID.