@@ -53,7 +53,7 @@ class AuthWorker {
         if(self::$busy) {
             if (session_status() === PHP_SESSION_ACTIVE) {
                 self::$slave->createAuthorizedSession($id, $customData, bin2hex(random_bytes(32)));
-                LogWorker::log("-SG- Authorized session created for user {$id}.");
+                LogWorker::debug("Authorized session created for user {$id}.");
             }
         }
     }
@@ -68,7 +68,7 @@ class AuthWorker {
         if(self::$busy) {
             if (session_status() === PHP_SESSION_ACTIVE) {
                 self::$slave->destroyAuthorizedSession();
-                LogWorker::log("-SG- Authorized session destroyed.");
+                LogWorker::debug("Authorized session destroyed.");
             }
         }
     }
@@ -91,11 +91,11 @@ class AuthWorker {
                 if(self::$slave->validateSession()) {
                     if($request && in_array($request->getMethod(), ["POST", "PUT", "DELETE", "PATCH"], true)) {
                         if(!self::$slave->validateCSRF($_SESSION["sgas_csrf"], $request->getDataItem("csrf_token"))) {
-                            LogWorker::warning("-SG- Restricted action for authenticated user was called without a valid csrf_token.");
+                            LogWorker::warning("Restricted action for authenticated user was called without a valid csrf_token.");
                             return false;
                         }
                     }
-                    LogWorker::log("-SG- Verified authorization for user {$_SESSION["sgas_uid"]}."); // Are we logging user data now??? Anyway...
+                    LogWorker::debug("Verified authorization for user {$_SESSION["sgas_uid"]}."); // Are we logging user data now??? Anyway...
                     return true;
                 } 
             }
@@ -144,11 +144,11 @@ class AuthWorker {
                 $id = self::$slave->loginAttempt($user, $pass, $dbTable, $dbIdCol, $dbNameCol, $dbPassCol);
                 
                 if($id) {
-                    LogWorker::log("-SG- User {$user} logged in via autologin.");
+                    LogWorker::debug("User {$user} logged in via autologin.");
                     AuthWorker::createAuthorization($id);
                     return true;
                 } else {
-                    LogWorker::warning("-SG- Failed autologin attempt for user {$user}.");
+                    LogWorker::warning("Failed autologin attempt for user {$user}.");
                     AuthWorker::destroyAuthorization();
                     return false;
                 }
