@@ -53,26 +53,39 @@ class LogWorker {
     /**
      * Writes an error log entry to the log file.
      * The text will be prefixed with the current date and time in the format "Y-m-d H:i:s",
-     * and will be marked as "**ERROR**".
+     * and will be marked as "//ERROR//".
      * 
      * @param string $text The error text to log.
      */
     public static function error(string $text): void {
         if(self::$busy) {
-            self::$slave->insertLogIntoStash("**ERROR** => ".$text);
+            self::$slave->insertLogIntoStash("//ERROR// ".$text);
         }
     }
 
     /**
      * Writes a warning log entry to the log file.
      * The text will be prefixed with the current date and time in the format "Y-m-d H:i:s",
-     * and will be marked as "**WARNING**".
+     * and will be marked as "//WARN//".
      * 
      * @param string $text The warning text to log.
      */
     public static function warning(string $text): void {
         if(self::$busy) {
-            self::$slave->insertLogIntoStash("**WARNING** => ".$text);
+            self::$slave->insertLogIntoStash("//WARN// ".$text);
+        }
+    }
+
+    /**
+     * Writes a debug log entry to the log file.
+     * The text will be prefixed with the current date and time in the format "Y-m-d H:i:s",
+     * and will be marked as "/SG/".
+     * 
+     * @param string $text The debug text to log.
+     */
+    public static function debug(string $text): void {
+        if(self::$busy && Bee::isDev()) {
+            self::$slave->insertLogIntoStash("/SG/ ".$text);
         }
     }
 
